<resources>
    <string name="app_name">NavigationDrawer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <string-array name="navigation_drawer_items_array">
        <item>SplashScreen</item>
        <item>EditText</item>
        <item>Button</item>
        <item>DialogBox</item>
        <item>AlertBox</item>
        <item>LogIn</item>
        <item>Register</item>
        <item>ProgressDialog</item>
        <item>Buttom Sheet</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="bottom_sheet">Bottom Sheet</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="print">Print</string>
    <string name="share">Share</string>
</resources>
